# ai-chronicle-working-3

./: 3D_VIEWER_GUIDE.md  =2.1  =2.1.0  =2.3.0  BATCH_LLM_LABELING_IMPLEMENTATION.md  CORRECTION_SUMMARY.md  DYNAMIC_CONTROLS_UPDATE.md  ENRICHMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY_3D.md  INSTALL.md  LEDGER.is  MEASUREMENT_SUMMARY.md  PROJECTION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SPECIFICATION.md  USAGE.md  chatgpt_sample.json  demo.sh  diverse_topics_graph.json  diverse_topics_graph_hdbscan.json  diverse_topics_graph_v2.json  ingestion_log.txt  launch_viewer_3d.sh  main.py  monitor_ingestion.sh  neural_networks_corrected.json  neural_networks_enriched.json  neural_networks_graph.json  neural_networks_measured.json  pyproject.toml  requirements.txt  run_full_pipeline.sh  test_enriched.json  test_hdbscan_labeling.py.old  test_llm_topic_labeling.py  test_projection_filtering.py.old  test_viewer_features.sh
examples/: bad_example.txt  diverse_topics.txt  expected_output.json  neural_networks.txt  projection_example.md
projections/: projection_1_t0.2_d1.json  projection_1_t0.2_k5_d1.json  projection_2_t0.2_d5.json  projection_2_t0.2_k3_d5.json  projection_3_t0.5_d1.json  projection_3_t0.5_k5_d1.json  projection_4_t0.5_d3.json  projection_4_t0.5_k4_d3.json  projection_5_t0.7_d2.json  projection_5_t0.7_k3_d2.json  projection_6_t0.7_d4.json  projection_6_t0.7_k2_d4.json  projection_7_t0.9_d1.json  projection_7_t0.9_k2_d1.json
snapshots/: diverse_topics_snapshot.json  enhanced_3d_snapshot.json  test_3d_snapshot.json
src/: engine.py
viewer/js/: ui.js  (+6 more)
(+26 files in other folders)
